--- a/examples/bluetooth_battery_notification.yaml
+++ b/examples/bluetooth_battery_notification.yaml
@@ -1,5 +1,5 @@
 alias: Bluetooth Low Battery Notification
-description: Sends a notification when a bluetooth device battery level falls below 30%
+description: Sends a notification when a bluetooth device battery level falls below 40%
 triggers:
   - trigger: state
     entity_id:
@@ -14,9 +14,9 @@ actions:
 
         {% for to_device in to_devices %}
           {% set from_device = (from_devices | selectattr('name', 'equalto', to_device.name) | list | first) %}
-          {% if to_device.battery is defined and to_device.battery | int < 30 %}
+          {% if to_device.battery is defined and to_device.battery | int < 40 %}
             {% if from_device is not none and from_device.battery is defined %}
-              {% if from_device.battery | int >= 30 %}
+              {% if from_device.battery | int >= 40 %}
                 {% set result.value = result.value + [to_device] %}
               {% endif %}
             {% endif %}
@@ -32,7 +32,6 @@ actions:
             title: Low Battery Alert
             message: "{{ repeat.item.name }}'s battery is at {{ repeat.item.battery }}%"
             notification_data:
-              tags: low_battery
-              priority: high
+              tags: battery
           action: script.notify_me
 mode: single
